--- a/src/bilbioteca2/aplicacion/VentanaUsuario.form
+++ b/src/bilbioteca2/aplicacion/VentanaUsuario.form
@@ -93,14 +93,11 @@
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
-                                  <Component id="jLabel_Cerrar" min="-2" max="-2" attributes="0"/>
-                              </Group>
                               <Component id="jB_aumento" min="-2" max="-2" attributes="0"/>
                               <Component id="jB_verLibro" alignment="1" min="-2" pref="111" max="-2" attributes="0"/>
+                              <Component id="jLabel_Cerrar" alignment="1" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="19" max="32767" attributes="0"/>
+                          <EmptySpace pref="24" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -114,48 +111,54 @@
                       <Component id="jLabel_Usuario" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel_codUsuario" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jTF_Busqueda" min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="jLabel_buscador" min="-2" max="-2" attributes="0"/>
-                      <Component id="jL_Buscar" min="-2" max="-2" attributes="0"/>
-                      <Component id="jL_mostarFiltros" min="-2" pref="29" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jRB_Autor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRB_Titulo" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRB_Editorial" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRB_ISBN" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRB_Publicacion" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRB_Seccion" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                          <Component id="jB_verLibro" min="-2" pref="65" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="jTF_Busqueda" min="-2" pref="29" max="-2" attributes="0"/>
+                              <Component id="jLabel_buscador" min="-2" max="-2" attributes="0"/>
+                              <Component id="jL_Buscar" min="-2" max="-2" attributes="0"/>
+                              <Component id="jL_mostarFiltros" min="-2" pref="29" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jB_aumento" min="-2" pref="65" max="-2" attributes="0"/>
+                          <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jRB_Autor" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRB_Titulo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRB_Editorial" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRB_ISBN" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRB_Publicacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRB_Seccion" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+                                  <Component id="jB_verLibro" min="-2" pref="65" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jB_aumento" min="-2" pref="65" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                                  <Component id="jB_prestamos" min="-2" pref="41" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="jScrollPane2" min="-2" pref="98" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <EmptySpace pref="24" max="32767" attributes="0"/>
                       </Group>
-                  </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace pref="30" max="32767" attributes="0"/>
-                          <Component id="jScrollPane2" min="-2" pref="98" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="jLabel_Cerrar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
-                          <Component id="jB_prestamos" min="-2" pref="41" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
