--- a/src/bilbioteca2/aplicacion/AñadirUsuario.form
+++ b/src/bilbioteca2/aplicacion/AñadirUsuario.form
@@ -56,12 +56,12 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="jPanel1" min="-2" pref="514" max="-2" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
                                   <Component id="jOk" min="-2" pref="301" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                                   <Component id="jLabel_Cerrar" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jPanel1" min="-2" pref="514" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -196,9 +196,9 @@
                           <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jAdmin" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                      <EmptySpace pref="25" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -380,7 +380,7 @@
         <Component class="javax.swing.JLabel" name="jLabel_Cerrar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/bilbioteca2/aplicacion/close.png"/>
+              <Image iconType="3" name="/bilbioteca2/aplicacion/iconos/close.png"/>
             </Property>
           </Properties>
           <Events>
